# research-synthesis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celery_app.py  config.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml
agent/: graph.py  state.py
agent/nodes/: critic.py  planner.py  synthesizer.py  worker.py
agent/tools/: __init__.py  serpapi.py  tavily.py
agents/: __init__.py  critic.py  planner.py  synthesizer.py  worker.py
api/: __init__.py  routes.py  schemas.py
api/models/: __init__.py
api/schemas/: __init__.py  requests.py  responses.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py
backend/app/agent/nodes/: __init__.py  critic.py  planner.py  (+2 more)
backend/app/api/: models.py  routes.py
backend/app/memory/: __init__.py  vector_store.py
config/: __init__.py  config.yml  settings.py
core/: __init__.py  checkpoint_serde.py  graph.py  intent.py  simple_chat.py  state.py
docs/: AGENTS.md  WORKFLOW.md
frontend/: Dockerfile  next.config.mjs  package.json
frontend/app/: layout.tsx  manifest.ts
frontend/app/recent/: page.tsx
frontend/components/: exmaple-prompts.tsx  tools-menu.tsx
frontend/components/chat-input/: chat-actions.tsx
frontend/components/thread/: step-renderer.tsx
frontend/hooks/: agent-provider.tsx
frontend/lib/config/: chat-mode.ts
frontend/store/: api-keys.store.ts  chat.store.ts
memory/: __init__.py  vector_store.py
tools/: __init__.py  arxiv.py  serpapi.py  tavily.py  wikipedia.py
worker/: celery_app.py  redis_events.py  tasks.py
(+10 files in other folders)
