[project]
name = "research-synthesis-agent"
version = "0.1.0"
description = "Multi-Source Research Synthesizer - Agentic RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=3.0.0",
    "chromadb>=0.5.0",
    "tavily-python>=0.5.0",
    "arxiv>=2.1.0",
    "wikipedia>=1.4.0",
    "google-search-results>=2.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "langsmith>=0.2.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["config", "core", "agents", "tools", "memory", "api", "worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
